# Serigy

./: .editorconfig  .gitignore  README.md  io.github.cleomenezesjr.Serigy.json  meson.build  page.codeberg.cleomenezesjr.Serigy.json  pyproject.toml
data/: io.github.cleomenezesjr.Serigy.desktop.in  io.github.cleomenezesjr.Serigy.gschema.xml  io.github.cleomenezesjr.Serigy.metainfo.xml.in  io.github.cleomenezesjr.Serigy.service.in  meson.build  page.codeberg.cleomenezesjr.Serigy.desktop.in  page.codeberg.cleomenezesjr.Serigy.gschema.xml  page.codeberg.cleomenezesjr.Serigy.metainfo.xml.in  page.codeberg.cleomenezesjr.Serigy.service.in
data/icons/: meson.build
po/: LINGUAS  POTFILES  POTFILES.in  es_CL.po  it.po  meson.build  pt_BR.po  ru.po  serigy.pot
src/: auto_cleaner.py  clipboard_manager.py  clipboard_monitor.py  clipboard_queue.py  content_type.py  copy_alert_window.py  define.py.in  main.py  meson.build  overlay_button.py  preferences.py  serigy.gresource.xml  serigy.in  settings.py  setup_dialog.py  setup_shortcut_portal.py  shortcut_portal.py  slot_data.py  style-dark.css  style.css  welcome_dialog.py  window.py
src/clipboard/: __init__.py  manager.py  monitor.py  queue.py
src/gtk/: copy-alert-window.blp  overlay-button.blp  preferences.blp  setup-dialog.blp  shortcuts-dialog.blp  welcome-dialog.blp  window.blp
src/logging/: session_file_handler.py  setup.py
